<feature>[dependencies]: Upgrade java version to 17
ZQLImpact

Change-Id: I656f6963726b77727363656d756465766b6a7a6a